# chord-detector

./: .gitignore  app.js  bulk-validation.css  bulk-validation.html  bulk-validation.js  bulk-viewer.html  bulk-viewer.js  cqt-test.html  index.html  realtime.css  realtime.html  realtime.js  shared.css  single-chord.css  single-chord.html  single-chord.js  styles.css
training/: .gitignore  Thesis_Notebook.ipynb  cnn_trainer.ipynb  extract_cqt_features.py  process_pop909.py  pyproject.toml
training/app/: README.md  __init__.py  config.py  server.py
training/app/pipeline/: __init__.py  audio_buffer.py  classifier.py  cqt_stream.py  onset_detector.py  runner.py  segment_buffer.py
training/app/static/: app.js  styles.css  worklet.js
training/app/templates/: index.html
training/app/tests/: __init__.py  test_pipeline_components.py
training/backups/: cnn_trainer_no_normal.ipynb  generate_validation_audio.py  specshow.py
training/notebooks/: audio-convert.ipynb  cqt-extraction.ipynb  cqt-info.ipynb  dataset-info.ipynb  eval-cqt-extraction.ipynb  validation-cqt-extract.ipynb
training/notebooks-old/cnn-dropouts/: opus-50e-DR25.ipynb  opus-50e-DR30.ipynb  opus-50e-DR40.ipynb
training/notebooks-old/cnns/: opus-30e.ipynb  opus-50e.ipynb  opus-50e_2.ipynb  opus_pcm-50e.ipynb
training/notebooks-old/evaluations/: svm-noisy-evaluation.ipynb
training/notebooks/cnn/: cnn-diff-eval.ipynb  cnn-misclass-analysis.ipynb  opus_baseline-bn-c64-c128-c256-c256-d256.ipynb
training/notebooks/cnns/: opus-30e.ipynb  opus-50e.ipynb  opus-50e_2.ipynb  opus_pcm-50e.ipynb  (+3 more)
(+115 files in other folders)
